chore: fix linter warnings